# oni

./: .gitignore  README.md  Rakefile  TODO.txt  ogre.gemspec  oni.gemspec  oni_win_precompiled.gemspec
ext/: README.txt
ext/OgreRuby/: agent.c  agent.h  camera.c  camera.h  extconf.rb  ogre.c  ogre.h  readme.txt  window.c  window.h
ext/OgreRuby/cpp/: CMakeLists.txt
ext/OgreRuby/cpp/cpp_core/: Agent.cpp  Agent.h  BaseApplication.cpp  BaseApplication.h  GameApplication.cpp  GameApplication.h  GraphicsObject.cpp  GraphicsObject.h  Item.cpp  Item.h  main.cpp
ext/OgreRuby/cpp_interface/: CMakeLists.txt  ogre.cpp  ogre.h
ext/OgreRuby/interface/: ogre.cpp  ogre.hpp
ext/glue/: ogre.c
ext/oni/: agent.c  agent.h  animation.c  animation.h  animation_bone.c  animation_bone.h  animation_easing.c  animation_easing.h  animation_track.c  animation_track.h  bone.c  bone.h  camera.c  camera.h  extconf.rb  light.c  light.h  model.c  model.h  node.c  node.h  node_management.c  node_management.h  oni.c  window.c  window.h
ext/oni/cpp/: CMakeLists.txt
ext/oni/cpp/cpp_core/: Agent.cpp  (+25 more)
lib/: OgreRuby.rb  oni.rb
lib/OgreRuby/: version.rb
lib/oni/: version.rb
test/: test.rb  test_agent_creation.rb  test_agent_rotation.rb  test_agent_scale.rb  test_agent_translation.rb  test_animation_benchmark.rb  test_animation_time.rb  test_animation_tracks.rb  test_attach_to_bone.rb  test_camera.rb  test_get_animation.rb  test_get_position_delta.rb  test_keyboard_input.rb  test_lighting.rb  test_node_creation.rb  test_quad_creation.rb  test_set_animation.rb  test_window_creation.rb
(+30 files in other folders)
